# civil-unrest-correlation-analysis

./: .gitignore  Dockerfile  Jacques_ref.txt  README.md  eda.ipynb  pyproject.toml  sean_references.txt
data/: oecd_test.csv
src/civil_unrest_correlation_analysis/: __init__.py  data_shaping.py  eda.ipynb  main.py  model.py  schema.py  test.json  utils.py
src/civil_unrest_correlation_analysis/data/: kei.csv.xz
src/civil_unrest_correlation_analysis/data/cleaned/: data.csv.xz
src/civil_unrest_correlation_analysis/data/final/: data.csv.xz  oecd.csv.xz
src/civil_unrest_correlation_analysis/utils/: building.py  cleaning.py  compression.py  misc.py  model.py
src/civil_unrest_correlation_analysis/viz/: chart.py
