[project]
name = "civil-unrest-correlation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean McLeaish", email = "smcleaish@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
