[project]
name = "civil-unrest-correlation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean McLeaish", email = "smcleaish@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "fastapi[standard]>=0.124.4",
    "geoacled",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.0",
    "pyarrow>=22.0.0",
    "pycountry>=24.6.1",
    "scikit-learn>=1.7.2",
    "scikit-learn-stubs>=0.0.3",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
geoacled = { git = "https://github.com/Civil-Knowledge-Center/geoacled" }


